<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="142dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:scrollbarSize="4dp"
        app:srcCompat="@drawable/calculator"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <EditText
        android:id="@+id/etFirstValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enter_first_value"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etSecondValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enter_second_value"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/etAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/plus"
        app:rippleColor="#433636" />

  <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/minus"
        app:rippleColor="#433636" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/multi"
        app:rippleColor="#433636" />

    <Button
        android:id="@+id/btnDevi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/Devi"
        app:rippleColor="#433636" />

</androidx.appcompat.widget.LinearLayoutCompat>